@@ -33,9 +33,6 @@
   Note: Not all code is using this class for cluster access, see index_image_mysql.php and index_image_pgsql.php for more custom code.
 */
 
-require_once( 'lib/ezutils/classes/ezdebugsetting.php' );
-require_once( 'lib/ezutils/classes/ezdebug.php' );
-
 class eZDBFileHandler
 {
     /*!
