@@ -27,7 +27,6 @@
 //
 
 require_once( 'kernel/common/template.php' );
-require_once( 'lib/ezutils/classes/ezdebug.php' );
 
 $tpl = templateInit();
 $http = eZHTTPTool::instance();
