@@ -37,7 +37,6 @@
 
 */
 
-require_once( 'lib/ezutils/classes/ezdebug.php' );
 class eZTemplateOptimizer
 {
     /*!
